# ChangeLog for app-misc/gallery
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gallery/Attic/ChangeLog,v 1.22 2004/02/12 18:57:33 mholzer Exp $

*gallery-1.4.2 (12 Feb 2004)

  12 Feb 2004; Martin Holzer <mholzer@gentoo.org> gallery-1.4.2.ebuild:
  Version bumped.

*gallery-1.4.1_p1 (25 Jan 2004)

  25 Jan 2004; Martin Holzer <mholzer@gentoo.org> gallery-1.4.1_p1.ebuild:
  Version bumped. Security fix.

  15 Dec 2003; Stuart Herbert <stuart@gentoo.org> gallery-1.4.1.ebuild:
  Fix for bug #32636

  14 Dec 2003; <spider@gentoo.org> gallery-1.4.1.ebuild:
  QA: fixing chown user.group user:group, bug #35127

  14 Dec 2003; Guy Martin <gmsoft@gentoo.org> gallery-1.4.1.ebuild:
  Marked stable on hppa.

  05 Dec 2003; Martin Holzer <mholzer@gentoo.org> gallery-1.4.1.ebuild:
  x86 stable

*gallery-1.4.1 (27 Nov 2003)

  27 Nov 2003; Martin Holzer <mholzer@gentoo.org> gallery-1.4.1.ebuild:
  Version bumped.

*gallery-1.4.1_rc4 (24 Nov 2003)

  24 Nov 2003; Martin Holzer <mholzer@gentoo.org> gallery-1.4.1_rc4.ebuild,
  gallery-1.4_p2.ebuild:
  changing chown. Closes #34015

*gallery-1.4_p2 (13 Oct 2003)

  13 Oct 2003; Martin Holzer <mholzer@gentoo.org> gallery-1.4_p2.ebuild:
  Version bumped. Security one.

  22 Sep 2003; Martin Holzer <mholzer@gentoo.org> gallery-1.4_p1.ebuild:
  Marked stable on all arch.

  16 Sep 2003; Martin Holzer <mholzer@gentoo.org> gallery-1.4_p1.ebuild:
  Adding locales and html docs.

*gallery-1.4_p1 (14 Sep 2003)

  14 Sep 2003; Martin Holzer <mholzer@gentoo.org> gallery-1.4_p1.ebuild:
  Version bumped.

*gallery-1.3.4_p1 (02 Sep 2003)

  02 Sep 2003; Daniel Ahlberg <aliz@gentoo.org> gallery-1.3.4_p1.ebuild :
  Security update.

  12 Aug 2003; Martin Holzer <mholzer@gentoo.org> gallery-1.3.4.ebuild:
  Added remote class and marked x86 stable

*gallery-1.3.4 (22 Jul 2003)
