@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/gallery
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gallery/Attic/ChangeLog,v 1.22 2004/02/12 18:57:33 mholzer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gallery/Attic/ChangeLog,v 1.23 2004/02/23 17:52:53 mr_bones_ Exp $
+
+  23 Feb 2004; Michael Sterrett <mr_bones_@gentoo.org>
+  gallery-1.4.1_p1.ebuild, gallery-1.4.2.ebuild:
+  move webapp-detect into pkg_setup(); mips and amd64 need deps first
 
 *gallery-1.4.2 (12 Feb 2004)
 
